kube/nginx_proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n4dask
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx # mount nginx-conf volume to /etc/nginx
          resources:
            requests:
              cpu: "1"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "2Gi"
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: n4dask
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30001
  selector:
    app: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n4dask
  namespace: af-jupyter
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - "n4dask.af.uchicago.edu"
      secretName: nginx-tls
  rules:
    - host: n4dask.af.uchicago.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n4dask
                port:
                  number: 80
