kube/nginx_svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n4dask
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30001
  selector:
    app: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n4dask
  namespace: af-jupyter
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - "n4dask.af.uchicago.edu"
      secretName: nginx-tls
  rules:
    - host: n4dask.af.uchicago.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n4dask
                port:
                  number: 80
